# python-devops-kubernetes

./: .gitignore  README.rst  pyproject.toml  setup.py
devops_kubernetes/: client.py  core.py
devops_kubernetes/schemas/: PodStatus.py
