[tool.poetry]
name = "devops_kubernetes"
version = "0.2.0"
description = "Kubernetes abstraction for DevOps"
authors = ["Croix Bleue <devops@qc.croixbleue.ca>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes-asyncio = "^24.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
