[project]
name = "devops_kubernetes"
version = "1.0.0"
description = "Kubernetes abstraction for DevOps"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Croix Bleue", email = "devops@qc.croixbleue.ca" }]
dependencies = ["kubernetes-asyncio"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
